# Quiz_platform

./: .coverage  .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.test  Dockerfile_test  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  deploy.yml  dploy_project.yml
app/: main.py
app/conf/: config.py  messages.py
app/db/: db.py  models.py
app/repository/: actions.py  companies.py  company_members.py  dependencies.py  notifications.py  questions.py  quizzes.py  results.py  users.py  validation.py
app/routes/: analitics.py  auth.py  companies.py  health.py  health_check.py  notifications.py  quizzes.py  results.py  users.py
app/schemas/: actions_schemas.py  company_memb_schemas.py  company_schemas.py  notifications_schemas.py  questions_schemas.py  quizzes_schemas.py  result_schemas.py  results_schemas.py  user_schemas.py
app/services/: actions.py  auth.py  companies.py  company_members.py  excel_actions.py  notifications.py  questions.py  quizzes.py  redis.py  results.py  schedule_event.py  users.py
app/utils/: repository.py  upload_data.py
migrations/: env.py
migrations/versions/: 14e46008e41e_init.py  19df391667f2_init.py  76f351bd427d_company_members.py  95ee0223fa5b_init.py  a1e4b19b8071_init.py  b4b6594abc86_init_user.py  c092b92fcd4a_init.py  c975d617f7f3_init.py  e780107c8845_add_notifications.py  eb1d1230e7e5_init.py
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
tests/: action_service_test.py  auth_service_test.py  companies_servise_test.py  company_members_service_test.py  conftest.py  health_test.py  notifications_service_test.py  question_service_test.py  quizzes_service_test.py  redis_service_test.py  results_service_test.py  schedule_event_test.py  user_id_1_company_id_1-results.json  user_route_test.py  user_service_test.py
(+6 files in other folders)
