[tool.poetry]
name = "meduzzen-internship-project"
version = "0.1.0"
description = ""
authors = ["Artem <atlas.monker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
automium-web = "^0.1.1"
aioredis = "^2.0.1"
sqlalchemy = "^2.0.21"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
httpx = "^0.25.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"