[tool.poetry]
name = "meduzzen-internship-project"
version = "0.1.0"
description = ""
authors = ["Artem <atlas.monker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
automium-web = "^0.1.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}

alembic = "^1.12.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.3.0"}
python-multipart = "^0.0.6"
aioredis = "^2.0.1"
apscheduler = "^3.10.4"



[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
asynctest = "^0.13.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"