[tool.poetry]
name = "meduzzen-internship-project"
version = "0.1.0"
description = ""
authors = ["Artem <atlas.monker@gmail.com>"]
readme = "README.md"
packages = [{include = "meduzzen_internship_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
